{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 107,
  "lineage": "25216a7c-7788-90be-daa7-72a0fa1c3976",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-fec22f87"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-fec22f87"
                ]
              }
            ],
            "id": "igw-040c1263",
            "internet_gateway_id": "igw-040c1263",
            "owner_id": "635280392941"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:vpc/vpc-fec22f87",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-5e697c35",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-d484d8b2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fec22f87",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-579d892e",
            "owner_id": "635280392941",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:vpc/vpc-fec22f87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-aaea8dd3",
            "default_route_table_id": "rtb-579d892e",
            "default_security_group_id": "sg-6f3c1f25",
            "dhcp_options_id": "dopt-d484d8b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-fec22f87",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-579d892e",
            "owner_id": "635280392941"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:635280392941:loadbalancer/udagram1-api-lb",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b",
              "eu-west-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "udagram1-api-lb-1600287193.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "udagram1-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-03d5588f66dc9e137",
              "i-0b6fe4bd08d679722",
              "i-0f5d7990a9f719faf"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "udagram1-api-lb",
            "security_groups": [
              "sg-071e43515daf112e4",
              "sg-0f6f1cbd28afe2ab8"
            ],
            "source_security_group": "635280392941/udagram1-common",
            "source_security_group_id": "sg-071e43515daf112e4",
            "subnets": [
              "subnet-00fb9906860048b0b",
              "subnet-045122807d307dc45",
              "subnet-0fb9ac35294295582"
            ],
            "tags": {
              "Cluster": "udagram1",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:635280392941:instance/i-02ae98ef75cc9143c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02ae98ef75cc9143c",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "udagram1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-092e0daf6f0dfed79",
            "private_dns": "ip-172-31-255-9.eu-west-1.compute.internal",
            "private_ip": "172.31.255.9",
            "public_dns": "ec2-3-248-209-46.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.209.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f237a6dbf8252994",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram1-common",
              "udagram1-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fb9906860048b0b",
            "tags": {
              "Cluster": "udagram1",
              "Name": "udagram1-bastion",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047504f5889bfe61f",
              "sg-071e43515daf112e4"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:635280392941:instance/i-0f5d7990a9f719faf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram1-host",
            "id": "i-0f5d7990a9f719faf",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-028b7fe19942b5df5",
            "private_dns": "ip-172-31-255-172.eu-west-1.compute.internal",
            "private_ip": "172.31.255.172",
            "public_dns": "ec2-52-30-126-168.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.126.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04c936226bf655a3c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram1-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fb9906860048b0b",
            "tags": {
              "Name": "udagram1-cp-1",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071e43515daf112e4"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:635280392941:instance/i-03d5588f66dc9e137",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram1-host",
            "id": "i-03d5588f66dc9e137",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc51424d06ec43b0",
            "private_dns": "ip-172-31-0-102.eu-west-1.compute.internal",
            "private_ip": "172.31.0.102",
            "public_dns": "ec2-54-154-13-229.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.154.13.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-014242b18f1eac59a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram1-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045122807d307dc45",
            "tags": {
              "Name": "udagram1-cp-2",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071e43515daf112e4"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:635280392941:instance/i-0b6fe4bd08d679722",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "udagram1-host",
            "id": "i-0b6fe4bd08d679722",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram1-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-05eb86285ea7c45de",
            "private_dns": "ip-172-31-1-92.eu-west-1.compute.internal",
            "private_ip": "172.31.1.92",
            "public_dns": "ec2-34-245-168-16.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.168.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fbf35037a37781b5",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram1-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb9ac35294295582",
            "tags": {
              "Name": "udagram1-cp-3",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-071e43515daf112e4"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:security-group/sg-071e43515daf112e4",
            "description": "cluster common rules",
            "egress": [],
            "id": "sg-071e43515daf112e4",
            "ingress": [],
            "name": "udagram1-common",
            "name_prefix": null,
            "owner_id": "635280392941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram1",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-fec22f87"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:security-group/sg-0f6f1cbd28afe2ab8",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6f1cbd28afe2ab8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram1-api-lb",
            "name_prefix": null,
            "owner_id": "635280392941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram1"
            },
            "timeouts": null,
            "vpc_id": "vpc-fec22f87"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:security-group/sg-047504f5889bfe61f",
            "description": "ssh access",
            "egress": [],
            "id": "sg-047504f5889bfe61f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udagram1-ssh",
            "name_prefix": null,
            "owner_id": "635280392941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram1"
            },
            "timeouts": null,
            "vpc_id": "vpc-fec22f87"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-1666058512",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071e43515daf112e4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-1694788109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-071e43515daf112e4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:subnet/subnet-00fb9906860048b0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.31.255.0/24",
            "id": "subnet-00fb9906860048b0b",
            "map_public_ip_on_launch": true,
            "owner_id": "635280392941",
            "tags": {
              "Cluster": "udagram1",
              "Name": "udagram1-eu-west-1a",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "vpc_id": "vpc-fec22f87"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:subnet/subnet-045122807d307dc45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.31.0.0/24",
            "id": "subnet-045122807d307dc45",
            "map_public_ip_on_launch": true,
            "owner_id": "635280392941",
            "tags": {
              "Cluster": "udagram1",
              "Name": "udagram1-eu-west-1b",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "vpc_id": "vpc-fec22f87"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:635280392941:subnet/subnet-0fb9ac35294295582",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-0fb9ac35294295582",
            "map_public_ip_on_launch": true,
            "owner_id": "635280392941",
            "tags": {
              "Cluster": "udagram1",
              "Name": "udagram1-eu-west-1c",
              "kubernetes.io/cluster/udagram1": "shared"
            },
            "vpc_id": "vpc-fec22f87"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}